add openglfx dependencies