@@ -1,4 +1,5 @@
 import org.gradle.api.tasks.testing.logging.TestLogEvent
+import org.gradle.internal.os.OperatingSystem
 
 plugins {
     kotlin("jvm") version "1.7.20"
@@ -23,20 +24,44 @@ val junitJupiterParamsVersion: String by rootProject
 val testfxVersion: String by rootProject
 val testfxMonocleVersion: String by rootProject
 val mockkVersion: String by rootProject
+val openglfxVerson: String by rootProject
+val lwjglVersion: String by rootProject
+
+val lwjglNativesParam: String = when (OperatingSystem.current()) {
+    OperatingSystem.LINUX -> "natives-linux"
+    OperatingSystem.WINDOWS -> "natives-windows"
+    OperatingSystem.MAC_OS -> "natives-macos"
+    else -> ""
+}
 
 repositories {
     mavenCentral()
     maven(uri("https://oss.sonatype.org/content/repositories/snapshots"))
+    maven(uri("https://jitpack.io"))
 }
 
 application {
     mainClass.set("solve.SolveApp")
-    applicationDefaultJvmArgs = listOf("--add-opens", "javafx.graphics/javafx.scene=ALL-UNNAMED", "-Xms2g", "-Xmx4g")
+    applicationDefaultJvmArgs = listOf(
+        "--add-modules", "javafx.controls",
+        "--add-opens", "javafx.graphics/javafx.scene=ALL-UNNAMED",
+        "--add-opens", "javafx.base/com.sun.javafx=ALL-UNNAMED",
+        "--add-opens", "javafx.graphics/com.sun.prism=ALL-UNNAMED",
+        "--add-opens", "javafx.graphics/com.sun.prism.d3d=ALL-UNNAMED",
+        "--add-opens", "javafx.graphics/com.sun.javafx.scene.layout=ALL-UNNAMED",
+        "--add-opens", "javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED",
+        "--add-opens", "javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED",
+        "--add-opens", "javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED",
+        "--add-opens", "javafx.graphics/javafx.scene.image=ALL-UNNAMED",
+        "--add-exports", "javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
+        "-Xms2g",
+        "-Xmx4g",
+    )
 }
 
 javafx {
     version = "17"
-    modules("javafx.controls")
+    modules("javafx.controls", "javafx.graphics")
 }
 
 dependencies {
@@ -58,6 +83,22 @@ dependencies {
     testImplementation("org.testfx:testfx-junit5:$testfxVersion")
     testImplementation("org.testfx:openjfx-monocle:$testfxMonocleVersion")
     testImplementation("io.mockk:mockk:$mockkVersion")
+
+    implementation("com.github.husker-dev.openglfx:core:3.0.5")
+    implementation("com.github.husker-dev.openglfx:lwjgl:3.0.5")
+    implementation(platform("org.lwjgl:lwjgl-bom:$lwjglVersion"))
+    implementation("org.lwjgl", "lwjgl")
+    implementation("org.lwjgl", "lwjgl-assimp")
+    implementation("org.lwjgl", "lwjgl-glfw")
+    implementation("org.lwjgl", "lwjgl-openal")
+    implementation("org.lwjgl", "lwjgl-opengl")
+    implementation("org.lwjgl", "lwjgl-stb")
+    runtimeOnly("org.lwjgl", "lwjgl", classifier = lwjglNativesParam)
+    runtimeOnly("org.lwjgl", "lwjgl-assimp", classifier = lwjglNativesParam)
+    runtimeOnly("org.lwjgl", "lwjgl-glfw", classifier = lwjglNativesParam)
+    runtimeOnly("org.lwjgl", "lwjgl-openal", classifier = lwjglNativesParam)
+    runtimeOnly("org.lwjgl", "lwjgl-opengl", classifier = lwjglNativesParam)
+    runtimeOnly("org.lwjgl", "lwjgl-stb", classifier = lwjglNativesParam)
 }
 
 tasks {
